force-app/main/default/objects/Forecast_Accuracy__c/Forecast_Accuracy__c.object-meta.xml
<CustomObject>
    <description>Stores forecast accuracy metrics for managers, reps, and teams. Tracks hit rate, value delta, and accuracy scoring over evaluated periods.</description>
    <label>Forecast Accuracy</label>
    <nameField>
        <displayFormat>FA-{0000}</displayFormat>
        <label>Forecast Accuracy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Accuracy Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>