force-app/main/default/objects/Forecast_Accuracy__c/fields/Accuracy_Score__c.field-meta.xml
<CustomField>
    <fullName>Accuracy_Score__c</fullName>
    <description>Composite accuracy score (0-100 scale)</description>
    <label>Accuracy Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>