force-app/main/default/objects/Forecast_Accuracy__c/fields/Accuracy_Type__c.field-meta.xml
<CustomField>
    <fullName>Accuracy_Type__c</fullName>
    <description>Scope of this accuracy record - Manager, Rep, or Team level</description>
    <label>Accuracy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Manager</fullName><default>false</default><label>Manager</label></value>
            <value><fullName>Rep</fullName><default>false</default><label>Rep</label></value>
            <value><fullName>Team</fullName><default>false</default><label>Team</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>