force-app/main/default/objects/Forecast_Accuracy__c/fields/Avg_Slip_Periods__c.field-meta.xml
<CustomField>
    <fullName>Avg_Slip_Periods__c</fullName>
    <description>Average number of periods deals slipped from their original forecast close</description>
    <label>Avg Slip Periods</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>