force-app/main/default/objects/Forecast_Accuracy__c/fields/Avg_Value_Delta__c.field-meta.xml
<CustomField>
    <fullName>Avg_Value_Delta__c</fullName>
    <description>Average percentage difference between forecasted and actual values</description>
    <label>Avg Value Delta</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>