force-app/main/default/objects/Forecast_Accuracy__c/fields/Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Method__c</fullName>
    <description>Algorithm used for this accuracy calculation</description>
    <label>Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Statistical</fullName><default>false</default><label>Statistical</label></value>
            <value><fullName>Weighted_Recent</fullName><default>false</default><label>Weighted Recent</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>