force-app/main/default/objects/Forecast_Accuracy__c/fields/Category_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Category_Matrix__c</fullName>
    <description>JSON matrix of accuracy broken down by forecast category</description>
    <label>Category Matrix</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>