force-app/main/default/objects/Forecast_Accuracy__c/fields/Hit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hit_Rate__c</fullName>
    <description>Percentage of forecasts that landed within acceptable variance</description>
    <label>Hit Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>