force-app/main/default/objects/Forecast_Accuracy__c/fields/Last_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Last_Calculated__c</fullName>
    <description>Timestamp of the most recent accuracy calculation run</description>
    <label>Last Calculated</label>
    <type>DateTime</type>
</CustomField>