force-app/main/default/objects/Forecast_Accuracy__c/fields/Periods_Evaluated__c.field-meta.xml
<CustomField>
    <fullName>Periods_Evaluated__c</fullName>
    <description>Number of fiscal periods included in this accuracy calculation</description>
    <label>Periods Evaluated</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>