force-app/main/default/objects/Forecast_Accuracy__c/fields/Records_Evaluated__c.field-meta.xml
<CustomField>
    <fullName>Records_Evaluated__c</fullName>
    <description>Total number of forecast records evaluated</description>
    <label>Records Evaluated</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>