force-app/main/default/objects/Forecast_Accuracy__c/fields/Trend__c.field-meta.xml
<CustomField>
    <fullName>Trend__c</fullName>
    <description>Direction of accuracy trend over recent periods</description>
    <label>Trend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Improving</fullName><default>false</default><label>Improving</label></value>
            <value><fullName>Stable</fullName><default>false</default><label>Stable</label></value>
            <value><fullName>Declining</fullName><default>false</default><label>Declining</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>