force-app/main/default/objects/Forecast_Accuracy__c/fields/Trend_Delta__c.field-meta.xml
<CustomField>
    <fullName>Trend_Delta__c</fullName>
    <description>Numeric change in accuracy score from prior period</description>
    <label>Trend Delta</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>