force-app/main/default/objects/Forecast_Accuracy__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The manager, rep, or team lead whose forecast accuracy is being measured</description>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Forecast_Accuracies</relationshipName>
    <type>Lookup</type>
</CustomField>